pipelines: adding more environment variables

--- a/azure-pipelines.nuke.yml
+++ b/azure-pipelines.nuke.yml
@@ -31,6 +31,7 @@ steps:
   - pwsh: nuke FastlaneMatch --skip --configuration '${{ parameters.Configuration }}' --bucketregion '${{ parameters.BucketRegion }}' --verbosity '${{ parameters.Verbosity }}'
     displayName: 'FastlaneMatch'
     env:
+      MATCH_PASSWORD: $(MATCH_PASSWORD)
       MATCH_S3_ACCESS_KEY: $(MATCH_S3_ACCESS_KEY)
       MATCH_S3_REGION: $(MATCH_S3_REGION)
       MATCH_S3_SECRET_ACCESS_KEY: $(MATCH_S3_SECRET_ACCESS_KEY)
