--- a/src/Versions.iOS/Info.plist
+++ b/src/Versions.iOS/Info.plist
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd"[]>
 <plist version="1.0">
   <dict>
@@ -25,7 +25,7 @@
     <key>CFBundleDisplayName</key>
     <string>Versions</string>
     <key>CFBundleIdentifier</key>
-    <string>com.companyname.versions.dev</string>
+    <string>com.company.versions</string>
     <key>CFBundleVersion</key>
     <string>0.1.0.61</string>
     <key>UILaunchStoryboardName</key>
