--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,7 @@ stages:
               arguments: 'install --global nuke.globaltool'
           - template: ./azure-pipelines.nuke.yml
           - task: CopyFiles@2
+            displayName: 'Copy Ipa'
             inputs:
               SourceFolder: 'artifacts/ios/'
               Contents: '**'
@@ -38,6 +39,16 @@ stages:
               CleanTargetFolder: true
               OverWrite: true
               preserveTimestamp: true
+          - task: CopyFiles@2
+            displayName: 'Copy Release Scripts'
+            inputs:
+              SourceFolder: './.build'
+              Contents: '*.sh'
+              TargetFolder: '$(build.artifactstagingdirectory)'
+              CleanTargetFolder: true
+              OverWrite: true
+              preserveTimestamp: true
+
           - task: PublishBuildArtifacts@1
             inputs:
               PathtoPublish: '$(Build.ArtifactStagingDirectory)'
