--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,3 +1,4 @@
+next-version: 1.0
 assembly-versioning-scheme: MajorMinorPatchTag
 assembly-file-versioning-format: '{Major}.{Minor}.{Patch}.{env:BUILD_NUMBER ?? 1}'
 continuous-delivery-fallback-tag: alpha
@@ -7,7 +8,7 @@ update-build-number: true
 branches:
   main:
     regex: ^master$|^main$
-    mode: ContinuousDelivery
+    mode: Mainline
     tag: ''
     increment: Patch
     prevent-increment-of-merged-branch-version: true
