pipelines: folder pathing incorrect for fastlane

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,7 +44,7 @@ stages:
             inputs:
               SourceFolder: './fastlane'
               Contents: '**'
-              TargetFolder: 'fastlane/$(build.artifactstagingdirectory)'
+              TargetFolder: '$(build.artifactstagingdirectory)/fastlane/'
               CleanTargetFolder: false
               OverWrite: false
               preserveTimestamp: true
